# calendar

./: README.md  data.py  gen.py  main.py  pyproject.toml  test.py
templates/: index.html
