[tool.poetry]
name = "calendar"
version = "0.1.0"
description = ""
authors = ["jomaro <jomaro.rodrigues@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63"
Jinja2 = "^2.11.3"
uvicorn = "^0.13.4"
aiofiles = "^0.6.0"
more-itertools = "^8.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
